--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test</title>
+    <title>Index</title>
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
   <body>
@@ -137,7 +137,8 @@
               <img src="" alt="" />
               <h4 class="service fw-semibold">Free insulation</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source Heat Pump.
+                Access the latest renewable technology with a Free Air Source
+                Heat Pump.
               </p>
             </div>
           </div>
@@ -146,7 +147,8 @@
               <img src="" alt="" />
               <h4 class="service fw-semibold">Free insulation</h4>
               <p class="description mb-0">
-                Access the latest renewable technology with a Free Air Source Heat Pump.
+                Access the latest renewable technology with a Free Air Source
+                Heat Pump.
               </p>
             </div>
           </div>
@@ -155,6 +157,242 @@
           </div>
         </div>
       </div>
+    </section>
+
+    <section class="why-us" id="why-us">
+      <div class="container">
+        <div class="box">
+          <div class="row align-items-center gy-6">
+            <div class="col-lg-5">
+              <img src="" alt="" />
+            </div>
+            <div class="col-lg-7 text-center">
+              <h3>
+                Why Choose Sublime <br />
+                Energy Services
+              </h3>
+              <p class="text">
+                Sublime Energy Services has years of experience in assisting
+                individuals, landlords, and families on their journey towards
+                energy-efficient homes. Our dedicated team collaborates with the
+                Government of the United Kingdom to enhance the use of efficient
+                energy.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="funding" id="funding">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 mx-auto">
+            <div class="text-center">
+              <h3>The Funding Process...</h3>
+              <p class="text">
+                It couldn't be easier to get started and apply for ECO 4 funding
+                with our easy 3 step process! We deal with your application from
+                start to finish, providing the funding and completing the
+                installation via our in-house team.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row gy-6 pt-12">
+          <div class="col-md-4">
+            <div class="text-center">
+              <h4 class="heading">Step 1</h4>
+              <img src="" alt="" />
+              <h4 class="heading">Check Your Eligibility</h4>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="text-center">
+              <h4 class="heading">Step 2</h4>
+              <img src="" alt="" />
+              <h4 class="heading">Book Your Survey</h4>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="text-center">
+              <h4 class="heading">Step 3</h4>
+              <img src="" alt="" />
+              <h4 class="heading">Get the Work Done</h4>
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <a href="" class="btn bg-white text-primary">Apply for Funding</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="eligibility" id="eligibility">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 mx-auto">
+            <div class="text-center">
+              <h3>Eligibility</h3>
+              <p class="text">
+                More people fall in to the Eligibility Criteria for free boiler
+                and insulation grants. Some of the criteria include:
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row gy-6 pt-12">
+          <div class="col-md-4">
+            <div class="text-center">
+              <img src="" alt="" />
+              <h4 class="heading">DWP Approved Benefits</h4>
+              <p class="text">
+                If you have a total combined household income of £31,000 or
+                less.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="text-center">
+              <img src="" alt="" />
+              <h4 class="heading">Child Benefits</h4>
+              <p class="text">
+                If you have a total combined household income of £31,000 or
+                less.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="text-center">
+              <img src="" alt="" />
+              <h4 class="heading">LA Flex Scheme</h4>
+              <p class="text">
+                If you have a total combined household income of £31,000 or
+                less.
+              </p>
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <a href="" class="btn btn-primary">Apply for Funding</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="faq" id="faq">
+      <div class="container">
+        <h3 class="text-center text-white mb-12">Your Questions Answered</h3>
+        <div class="row gy-6">
+          <div class="col-md-6">
+            <h4 class="fw-semibold mb-8">
+              What Energy Saving Measures Could I Get?
+            </h4>
+            <p class="text">
+              Most people know the scheme as a free boiler replacement scheme
+              however under ECO 4 the following energy-saving measures are
+              available
+            </p>
+            <ul class="ps-2">
+              <li>
+                <p class="text mb-0">Air Source Heat Pumps</p>
+              </li>
+              <li>
+                <p class="text mb-0">First Time Central Heating</p>
+              </li>
+              <li>
+                <p class="text mb-0">Solar PV</p>
+              </li>
+              <li>
+                <p class="text mb-0">Electric Storage Heaters</p>
+              </li>
+              <li>
+                <p class="text mb-0">Cavity Wall Insulation</p>
+              </li>
+              <li>
+                <p class="text mb-0">External Wall Insulation</p>
+              </li>
+              <li>
+                <p class="text mb-0">Room in Roof Insulation</p>
+              </li>
+              <li>
+                <p class="text mb-0">Loft Insulation</p>
+              </li>
+              <li>
+                <p class="text mb-0">Under Floor Insulation</p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <h4 class="fw-semibold mb-8">Where does the money come from?</h4>
+            <p class="text">
+              Funding for your Home Energy Improvements is paid for by the
+              Leading Energy Companies such as British Gas, SSE, Scottish Power,
+              N-Power and so on. They have a quota to fill for improving the
+              energy performance of UK Homes and can face large fines if they
+              miss their targets. The aim is to reduce how much fuel UK
+              households use on average. To improve this they aim to make
+              generating heat cheaper (with new boilers), and maintaining heat
+              easier (with insulation).
+              <br />
+              The money for these improvements comes from the profits of
+              companies everyone is contributing to monthly, in our energy
+              bills. It doesn't come from the Government the same way that
+              things like Universal Credit does.
+            </p>
+          </div>
+          <div class="col-12 text-center">
+            <h4 class="fw-semibold mb-8">How do I apply?</h4>
+            <p class="text">
+              You can apply for ECO 4 Funding by applying online. Our team will
+              then contact you to take you through the process and advise which
+              measures you qualify for. Apply Now.
+            </p>
+          </div>
+          <div class="col-12 text-center">
+            <a href="" class="btn bg-white text-primary">Ask a Question?</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="brands" id="brands">
+      <div class="container">
+        <h2 class="text-center text-primary mb-8">Trusted Brands</h2>
+        <div class="row gy-6">
+          <div class="col-lg-3 col-md-6 text-center">
+            <img src="" alt="" />
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <img src="" alt="" />
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <img src="" alt="" />
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-10 mx-auto text-center">
+            <h2 class="text-primary mb-8">Sublime Energy Services</h2>
+            <p class="text">
+              has years of experience helping individuals, landlords, and
+              families in their journey to Energy Efficient homes. Our dedicated
+              team is working alongside with Gov. of United Kingdom for
+              improving efficient energy use.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="copyright">
+      © Copyright 2023, All Rights Reserved | Sublime Energy Services
     </section>
 
     <script src="./js/jquery-3.7.0.js"></script>
