--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./images/sublime-logo.png" height="" alt="" />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -24,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav gap-12 align-items-center ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary" href="#">Apply Now</a>
+              <a class="btn btn-primary" href="./apply-now.html">Apply Now</a>
             </li>
           </ul>
         </div>
@@ -94,7 +96,7 @@
         <div class="row gx-lg-6 gy-12 g-4">
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-1.png" alt="" />
               <h4 class="service fw-semibold">Free Solar pv</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -104,7 +106,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-2.png" alt="" />
               <h4 class="service fw-semibold">Free Air Source Heat Pump</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -114,7 +116,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-3.png" alt="" />
               <h4 class="service fw-semibold">Free Boiler</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -124,7 +126,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-4.png" alt="" />
               <h4 class="service fw-semibold">Free central heating</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -134,7 +136,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-5.png" alt="" />
               <h4 class="service fw-semibold">Free insulation</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -144,7 +146,7 @@
           </div>
           <div class="col-lg-4 col-md-6 col-12">
             <div class="box">
-              <img src="" alt="" />
+              <img src="./images/service-6.png" alt="" />
               <h4 class="service fw-semibold">Free insulation</h4>
               <p class="description mb-0">
                 Access the latest renewable technology with a Free Air Source
@@ -153,7 +155,7 @@
             </div>
           </div>
           <div class="col-12 text-center">
-            <a href="" class="btn btn-primary">Apply for Funding</a>
+            <a href="./apply-now.html" class="btn btn-primary">Apply for Funding</a>
           </div>
         </div>
       </div>
@@ -164,7 +166,7 @@
         <div class="box">
           <div class="row align-items-center gy-6">
             <div class="col-lg-5">
-              <img src="" alt="" />
+              <img src="./images/why-choose.png" class="w-100 h-auto" alt="" />
             </div>
             <div class="col-lg-7 text-center">
               <h3>
@@ -203,26 +205,26 @@
           <div class="col-md-4">
             <div class="text-center">
               <h4 class="heading">Step 1</h4>
-              <img src="" alt="" />
+              <img src="./images/funding-1.svg" alt="" />
               <h4 class="heading">Check Your Eligibility</h4>
             </div>
           </div>
           <div class="col-md-4">
             <div class="text-center">
               <h4 class="heading">Step 2</h4>
-              <img src="" alt="" />
+              <img src="./images/funding-2.svg" alt="" />
               <h4 class="heading">Book Your Survey</h4>
             </div>
           </div>
           <div class="col-md-4">
             <div class="text-center">
               <h4 class="heading">Step 3</h4>
-              <img src="" alt="" />
+              <img src="./images/funding-3.svg" alt="" />
               <h4 class="heading">Get the Work Done</h4>
             </div>
           </div>
           <div class="col-12 text-center">
-            <a href="" class="btn bg-white text-primary">Apply for Funding</a>
+            <a href="./apply-now.html" class="btn bg-white text-primary">Apply for Funding</a>
           </div>
         </div>
       </div>
@@ -244,7 +246,7 @@
         <div class="row gy-6 pt-12">
           <div class="col-md-4">
             <div class="text-center">
-              <img src="" alt="" />
+              <img src="./images/eligibility-1.svg" alt="" />
               <h4 class="heading">DWP Approved Benefits</h4>
               <p class="text">
                 If you have a total combined household income of £31,000 or
@@ -254,7 +256,7 @@
           </div>
           <div class="col-md-4">
             <div class="text-center">
-              <img src="" alt="" />
+              <img src="./images/eligibility-2.svg" alt="" />
               <h4 class="heading">Child Benefits</h4>
               <p class="text">
                 If you have a total combined household income of £31,000 or
@@ -264,7 +266,7 @@
           </div>
           <div class="col-md-4">
             <div class="text-center">
-              <img src="" alt="" />
+              <img src="./images/eligibility-3.svg" alt="" />
               <h4 class="heading">LA Flex Scheme</h4>
               <p class="text">
                 If you have a total combined household income of £31,000 or
@@ -273,7 +275,7 @@
             </div>
           </div>
           <div class="col-12 text-center">
-            <a href="" class="btn btn-primary">Apply for Funding</a>
+            <a href="./apply-now.html" class="btn btn-primary">Apply for Funding</a>
           </div>
         </div>
       </div>
@@ -360,16 +362,16 @@
         <h2 class="text-center text-primary mb-8">Trusted Brands</h2>
         <div class="row gy-6">
           <div class="col-lg-3 col-md-6 text-center">
-            <img src="" alt="" />
+            <img src="./images/brand-1.png" alt="" />
           </div>
           <div class="col-lg-3 col-md-6 text-center">
-            <img src="" alt="" />
+            <img src="./images/brand-2.png" alt="" />
           </div>
           <div class="col-lg-3 col-md-6 text-center">
-            <img src="" alt="" />
+            <img src="./images/brand-3.png" alt="" />
           </div>
           <div class="col-lg-3 col-md-6 text-center">
-            <img src="" alt="" />
+            <img src="./images/brand-4.png" alt="" />
           </div>
         </div>
       </div>
