--- a/about-us.html
+++ b/about-us.html
@@ -43,6 +43,34 @@
       <h1 class="text-center">About Us</h1>
     </section>
 
+    <section class="banner-2">
+      <div class="container">
+        <div class="text-center">
+          <h2 class="text-primary">Who are We?</h2>
+          <p class="text mb-12">
+            We are the North East's Leading energy saving experts…
+          </p>
+          <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <h5 class="fw-medium text-center mb-0">
+                We are the North East's leading energy saving experts, helping
+                you to take a 'whole home' approach to energy efficiency. We
+                have helped Hartlepool and North east based homes lose less, use
+                less and generate more making homes more comfortable, helping
+                reduce energy consumption and most importantly saving homeowners
+                money. To find out how we can help you save money with our range
+                of green services, finance and funding please call us (Local
+                Rate) on T: 01429 275575 or alternatively email
+                info@borthwickheating.co.uk. A member of our experienced team
+                will be more than happy to discuss all of the available options
+                we have available for you.
+              </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="why-us" id="why-us">
       <div class="container">
         <div class="box">
