--- a/apply-now.html
+++ b/apply-now.html
@@ -43,72 +43,112 @@
       <h1 class="text-center">Apply Now</h1>
     </section>
 
-    <section class="why-us" id="why-us">
+    <section class="banner-2">
       <div class="container">
-        <div class="box">
-          <div class="row align-items-center gy-6">
-            <div class="col-lg-5">
-              <img src="./images/why-choose.png" class="w-100 h-auto" alt="" />
-            </div>
-            <div class="col-lg-7 text-center">
-              <h3>
-                Why Choose Sublime <br />
-                Energy Services
-              </h3>
-              <p class="text">
-                Sublime Energy Services has years of experience in assisting
-                individuals, landlords, and families on their journey towards
-                energy-efficient homes. Our dedicated team collaborates with the
-                Government of the United Kingdom to enhance the use of efficient
-                energy.
-              </p>
+        <div class="text-center">
+          <h2 class="text-primary mb-8">Enter Your Postal Code</h2>
+          <div class="row">
+            <div class="col-md-8 mx-auto">
+              <form action="" class="mb-4">
+                <div class="form-group mb-0">
+                  <div class="input-group mb-0">
+                    <input type="text" class="form-control" />
+                    <button class="btn btn-outline-primary">Search</button>
+                  </div>
+                  <div class="invalid-feedback">Address is not available</div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="funding" id="funding">
-      <div class="container">
+        <hr>
         <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <div class="text-center">
-              <h3>The Funding Process...</h3>
-              <p class="text">
-                It couldn't be easier to get started and apply for ECO 4 funding
-                with our easy 3 step process! We deal with your application from
-                start to finish, providing the funding and completing the
-                installation via our in-house team.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="row gy-6 pt-12">
-          <div class="col-md-4">
-            <div class="text-center">
-              <h4 class="heading">Step 1</h4>
-              <img src="./images/funding-1.svg" alt="" />
-              <h4 class="heading">Check Your Eligibility</h4>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="text-center">
-              <h4 class="heading">Step 2</h4>
-              <img src="./images/funding-2.svg" alt="" />
-              <h4 class="heading">Book Your Survey</h4>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="text-center">
-              <h4 class="heading">Step 3</h4>
-              <img src="./images/funding-3.svg" alt="" />
-              <h4 class="heading">Get the Work Done</h4>
-            </div>
-          </div>
-          <div class="col-12 text-center">
-            <a href="./apply-now.html" class="btn bg-white text-primary"
-              >Apply for Funding</a
-            >
+          <div class="col-md-8 mx-auto">
+            <form action="">
+              <h4>1. What measures we can help you with?</h4>
+              <p>Multiple options can be selected</p>
+              <div class="row gy-3 measures">
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="0">
+                  <label for="0">First Time Central Heating</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="1">
+                  <label for="1">Electric Storage Heaters</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="2">
+                  <label for="2">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="3">
+                  <label for="3">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="4">
+                  <label for="4">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="5">
+                  <label for="5">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="6">
+                  <label for="6">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="7">
+                  <label for="7">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="8">
+                  <label for="8">ABC</label>
+                </div>
+                <div class="col-6">
+                  <input type="checkbox" name="measures" id="9">
+                  <label for="9">ABC</label>
+                </div>
+              </div>
+              <hr>
+              <h4>Other Information</h4>
+              <div class="row gy-6">
+                <div class="col-md-6">
+                  <label for="" class="form-label">How are you related to property?</label>
+                  <select name="" id="" class="form-select"></select>
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">How do you currently heat your home?</label>
+                  <select name="" id="" class="form-select"></select>
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Are you or any of your household members claiming any benefits?</label>
+                  <select name="" id="" class="form-select"></select>
+                </div>
+                <div class="col-md-6">
+                  <label for="" class="form-label">Is your combined household income is below $31k annually?</label>
+                  <select name="" id="" class="form-select"></select>
+                </div>
+              </div>
+              <hr>
+              <h4>Personal Information</h4>
+              <div class="row gy-6">
+                <div class="col-12">
+                  <label for="" class="form-label">First Name</label>
+                  <input type="text" class="form-control">
+                </div>
+                <div class="col-12">
+                  <label for="" class="form-label">Phone</label>
+                  <input type="tel" class="form-control">
+                </div>
+                <div class="col-12">
+                  <label for="" class="form-label">Email</label>
+                  <input type="email" class="form-control">
+                </div>
+              </div>
+              <div class="text-end mt-3">
+                <button type="submit" class="btn btn-primary">Submit All</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
