--- a/about-us.html
+++ b/about-us.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./images/sublime-logo.png" height="" alt="" />
+          <img src="./images/sublime-logo.svg" height="70" alt="" />
         </a>
         <button
           class="navbar-toggler"
