--- a/apply-now.html
+++ b/apply-now.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./images/sublime-logo.png" height="" alt="" />
+          <img src="./images/sublime-logo.svg" height="70" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -68,43 +68,43 @@
               <h4>1. What measures we can help you with?</h4>
               <p>Multiple options can be selected</p>
               <div class="row gy-3 measures">
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="0">
                   <label for="0">First Time Central Heating</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="1">
                   <label for="1">Electric Storage Heaters</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="2">
                   <label for="2">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="3">
                   <label for="3">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="4">
                   <label for="4">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="5">
                   <label for="5">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="6">
                   <label for="6">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="7">
                   <label for="7">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="8">
                   <label for="8">ABC</label>
                 </div>
-                <div class="col-6">
+                <div class="col-md-6">
                   <input type="checkbox" name="measures" id="9">
                   <label for="9">ABC</label>
                 </div>
