--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
                 </p>
                 <a href="" class="btn btn-outline-primary">Learn More</a>
               </div>
-              <div class="col-lg-4">
+              <div class="col-lg-5">
                 <img
-                  src="./images/banner-1.jpg"
+                  src="./images/banner-2.png"
                   class="w-100"
                   height="auto"
                   alt=""
@@ -454,6 +454,7 @@
         autoplay: true,
         autoplaySpeed: 5000,
         arrows: true,
+        dots: true,
       });
     </script>
   </body>
