--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-md navbar-light bg-white">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="./images/sublime-logo.svg" height="70" alt="" />
@@ -23,8 +23,8 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav gap-12 align-items-center ms-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse pt-md-0 pt-4" id="navbarSupportedContent">
+          <ul class="navbar-nav gap-md-12 gap-4 align-items-center ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
@@ -32,7 +32,7 @@
               <a class="nav-link" href="./about-us.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="btn btn-primary" href="./apply-now.html">Apply Now</a>
+              <a class="btn btn-primary d-md-inline-block d-block" href="./apply-now.html">Apply Now</a>
             </li>
           </ul>
         </div>
